adding casting.html

--- a/casting.html
+++ b/casting.html
@@ -83,7 +83,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" title="Casting at REDSKY">Casting</a>
+              <a class="nav-link" href="casting.html" title="Casting at REDSKY">Casting</a>
             </li>
             <li class="nav-item">
               <a
@@ -111,26 +111,7 @@
         destination for the entire filmmaking journey.
         <br />
         <br />
-        REDSKY stands at the forefront of cinematic innovation, weaving
-        narratives that give an immense impact to our audience through our
-        creative minds. Each of our work is a testament to our dedication to
-        redefining the cinematic perspective.
-        <br />
-        <br />
-        At REDSKY, we believe in pushing the boundaries of storytelling,
-        transcending conventional narratives to create unforgettable cinematic
-        experiences. Our team of passionate filmmakers, visionaries, and
-        storytellers collaborate to bring bold ideas to life, blending
-        cutting-edge technology with the artistry of filmmaking.
-        <br />
-        <br />
-        REDSKY has collaborated with many established and globally known actors,
-        writers, photographers, audio engineers, artists and partners in the
-        film industry from Norway, Spain, Sweden, UK and America. From script to screen,
-        audition to casting, REDSKY is your destination for cinematic expertise,
-        where dreams are realized, and talents find their true expressions.
-        Welcome to REDSKY Studios - where every story begins, and every
-        performance becomes a masterpiece.
+        We offer casting services for individuals of all ages, nationalities, regions, and genders. If you can speak and read English, you qualify to apply. Proficiency in additional languages is a bonus. Our goal is to provide casting opportunities that can lead to auditions, helping you realize your dream of becoming an actor or actress.
       </p>
       </div>
       <footer>
