--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
               <a class="nav-link" href="studio.html" title="Our Studio">Our Studio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" title="Casting at REDSKY">Casting</a>
+              <a class="nav-link" href="casting.html" title="Casting at REDSKY">Casting</a>
             </li>
              <li class="nav-item">
               <a class="nav-link" href="us.html" title="About REDSKY Associates"
