--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" title="Casting at REDSKY">Casting</a>
+              <a class="nav-link" href="casting.html" title="Casting at REDSKY"
+                >Casting</a
+              >
             </li>
             <li class="nav-item">
               <a
