--- a/studio.html
+++ b/studio.html
@@ -82,7 +82,9 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" title="Casting at REDSKY">Casting</a>
+              <a class="nav-link" href="casting.html" title="Casting at REDSKY"
+                >Casting</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="us.html" title="About REDSKY Associates"
