--- a/jay.html
+++ b/jay.html
@@ -46,10 +46,10 @@
         than 8 years. After leaving Thailand in 2019, she pursued a career in
         the Fashion Industry because she has always had a passion for fashion
         and arts. She has many interests and hobbies, and one of her interests
-        revolves around film and acting. She always participated in school plays
-        during her childhood and always enjoyed playing a character. Apart from
-        film and acting, she loves learning new skills, especially in technology
-        and arts.
+        revolves around film and acting. During her childhood, she was always in
+        school plays and always enjoyed playing different types of characters.
+        Apart from film and acting, she loves learning new skills, especially in
+        technology and arts.
       </p>
       <img class="profile-photo" src="" alt="TJ's photo" width="300" />
     </div>
