--- a/casting.html
+++ b/casting.html
@@ -105,10 +105,7 @@
       </div>
     <div class="about-container container">
       <p class="redsky-description">
-        Welcome to REDSKY, a new and unparalleled fusion of cinematic
-        excellence, audion innovation and casting brilliance. At REDSKY, we are
-        not just a movie studio; we are a visionary and comprehensive
-        destination for the entire filmmaking journey.
+        Welcome to our REDSKY Casting! We are dedicated to discovering and nurturing talent from diverse backgrounds. Our mission is to create opportunities for aspiring actors and actresses, helping them take the first step toward achieving their dreams.
         <br />
         <br />
         We offer casting services for individuals of all ages, nationalities, regions, and genders. If you can speak and read English, you qualify to apply. Proficiency in additional languages is a bonus. Our goal is to provide casting opportunities that can lead to auditions, helping you realize your dream of becoming an actor or actress.
