--- a/us.html
+++ b/us.html
@@ -130,7 +130,7 @@
           </a>
         </div>
         <div class="col-lg-4">
-          <img src="michael_carcuso.jpg" alt="REDSKY COO" />
+          <img src="michael_carcuso.jpeg" alt="REDSKY COO" />
           <p class="us-team mt-2">Michael</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
