added html on US and images

--- a/jay.html
+++ b/jay.html
@@ -51,7 +51,12 @@
         Apart from film and acting, she loves learning new skills, especially in
         technology and arts.
       </p>
-      <img class="profile-photo" src="" alt="TJ's photo" width="300" />
+      <img
+        class="profile-photo"
+        src="images/jay2.png"
+        alt="Jay's photo"
+        width="300"
+      />
     </div>
   </body>
 </html>
