--- a/us.html
+++ b/us.html
@@ -113,15 +113,17 @@
           <p class="us-team">Writer</p>
           <p class="us-team">Director</p>
           <p class="us-team">Producer</p>
-          <button type="button" class="btn btn-secondary btn-sm mb-5">
-            Read more
-          </button>
+          <a href="mats.html" class="read-more-link" target="_blank">
+            <button type="button" class="btn btn-secondary btn-sm mb-5">
+              Read more
+            </button>
+          </a>
         </div>
         <div class="col-lg-2"></div>
       </div>
       <div class="row">
         <div class="col-lg-4">
-          <img src="images/tj.png" alt="REDSKY ACTOR/CHOREOGRAPHER" />
+          <img src="images/tj.png" alt="REDSKY Choreographer/Actor" />
           <p class="us-team mt-2">TJ</p>
           <a class="read-more-link" href="tj.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
@@ -132,12 +134,17 @@
         <div class="col-lg-4">
           <img src="images/michaelc.jpeg" alt="REDSKY COO" />
           <p class="us-team mt-2">Michael</p>
-          <button type="button" class="btn btn-secondary btn-sm mb-5">
-            Read more
-          </button>
+          <a class="read-more-link" href="michael.html" target="_blank">
+            <button type="button" class="btn btn-secondary btn-sm mb-5">
+              Read more
+            </button>
+          </a>
         </div>
         <div class="col-lg-4">
-          <img src="images/jay.png" alt="REDSKY Web Developer/Co-founder" />
+          <img
+            src="images/jay.png"
+            alt="REDSKY Web Developer/Creative Designer"
+          />
           <p class="us-team mt-2">Jay Apirinya</p>
           <a class="read-more-link" href="jay.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
@@ -148,13 +155,6 @@
       </div>
       <div class="row">
         <div class="col-lg-4">
-          <img src="images/avatar.png" alt="REDSKY Co-writer" />
-          <p class="us-team mt-2">Raj</p>
-          <button type="button" class="btn btn-secondary btn-sm mb-5">
-            Read more
-          </button>
-        </div>
-        <div class="col-lg-4">
           <img src="images/kevin.png" alt="REDSKY Sound engineer" />
           <p class="us-team mt-2">Kevin</p>
           <a class="read-more-link" href="kevin.html" target="_blank">
@@ -164,8 +164,17 @@
           </a>
         </div>
         <div class="col-lg-4">
-          <img src="images/avatar.png" alt="REDSKY Photographer" />
-          <p class="us-team mt-2">BB</p>
+          <img src="images/blue.png" alt="REDSKY Photographer" />
+          <p class="us-team mt-2">Blue</p>
+          <a class="read-more-link" href="blue.html" target="_blank">
+            <button type="button" class="btn btn-secondary btn-sm mb-5">
+              Read more
+            </button>
+          </a>
+        </div>
+        <div class="col-lg-4">
+          <img src="images/avatar.png" alt="REDSKY Co-writer" />
+          <p class="us-team mt-2">Raj</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
