edit footer in index.html and casting.html

--- a/casting.html
+++ b/casting.html
@@ -112,7 +112,7 @@
       </p>
       </div>
       <footer>
-      <div class="social-media-about">
+      <div class="social-media-casting">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
         </div>
