--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
     </div>
     <footer>
-      <div class="social-media-home">
+      <div class="social-media-home-index">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
         </div>
