--- a/us.html
+++ b/us.html
@@ -108,7 +108,8 @@
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
           <img src="images/mats2.png" alt="REDSKY CEO" />
-          <p class="us-team mt-4">CEO</p>
+          <p class="us-team mt-4">Mats Mekker Bjørseth</p>
+          <p class="us-team">CEO</p>
           <p class="us-team">Founder</p>
           <p class="us-team">Writer</p>
           <p class="us-team">Director</p>
@@ -145,7 +146,7 @@
             src="images/jay.png"
             alt="REDSKY Web Developer/Creative Designer"
           />
-          <p class="us-team mt-2">Jay Apirinya</p>
+          <p class="us-team mt-2">Jay</p>
           <a class="read-more-link" href="jay.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
