added html, edited us.html, added img

--- a/us.html
+++ b/us.html
@@ -214,10 +214,12 @@
         </div>
         <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Photographer" />
-          <p class="us-team mt-2">Carmen</p>
-          <button type="button" class="btn btn-secondary btn-sm mb-5">
-            Read more
-          </button>
+          <p class="us-team mt-2">Jim de Smed</p>
+          <a class="read-more-link" href="jimdesmed.html" target="_blank">
+            <button type="button" class="btn btn-secondary btn-sm mb-5">
+              Read more
+            </button>
+          </a>
         </div>
         <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Photographer" />
