--- a/us.html
+++ b/us.html
@@ -174,6 +174,24 @@
           </a>
         </div>
         <div class="col-lg-4">
+          <img src="images/jimdesmed.png" alt="REDSKY Photographer" />
+          <p class="us-team mt-2">Jim de Smed</p>
+          <a class="read-more-link" href="jimdesmed.html" target="_blank">
+            <button type="button" class="btn btn-secondary btn-sm mb-5">
+              Read more
+            </button>
+          </a>
+        </div>
+        <div class="col-lg-4">
+          <img src="images/mathewwesthead.jpg" alt="REDSKY Photographer" />
+          <p class="us-team mt-2">Mathew Westhead</p>
+          <a class="read-more-link" href="mathew.html" target="_blank">
+            <button type="button" class="btn btn-secondary btn-sm mb-5">
+              Read more
+            </button>
+          </a>
+        </div>
+        <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Co-writer" />
           <p class="us-team mt-2">Raj</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
@@ -202,24 +220,6 @@
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-4">
-          <img src="images/avatar.png" alt="REDSKY Photographer" />
-          <p class="us-team mt-2">Maria Camila</p>
-          <button type="button" class="btn btn-secondary btn-sm mb-5">
-            Read more
-          </button>
-        </div>
-        <div class="col-lg-4">
-          <img src="images/avatar.png" alt="REDSKY Photographer" />
-          <p class="us-team mt-2">Jim de Smed</p>
-          <a class="read-more-link" href="jimdesmed.html" target="_blank">
-            <button type="button" class="btn btn-secondary btn-sm mb-5">
-              Read more
-            </button>
-          </a>
         </div>
         <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Photographer" />
