fixed html and img

--- a/us.html
+++ b/us.html
@@ -183,7 +183,7 @@
           </a>
         </div>
         <div class="col-lg-4">
-          <img src="images/mathewwesthead.jpg" alt="REDSKY Photographer" />
+          <img src="images/mathewwesthead.png" alt="REDSKY Photographer" />
           <p class="us-team mt-2">Mathew Westhead</p>
           <a class="read-more-link" href="mathew.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
@@ -198,29 +198,6 @@
             Read more
           </button>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-4">
-          <img src="images/avatar.png" alt="REDSKY Actorscout" />
-          <p class="us-team mt-2">Paul</p>
-          <button type="button" class="btn btn-secondary btn-sm mb-5">
-            Read more
-          </button>
-        </div>
-        <div class="col-lg-4">
-          <img src="images/avatar.png" alt="REDSKY Assistant" />
-          <p class="us-team mt-2">Antonio</p>
-          <button type="button" class="btn btn-secondary btn-sm mb-5">
-            Read more
-          </button>
-        </div>
-        <div class="col-lg-4">
-          <img src="images/avatar.png" alt="REDSKY Casting Agent" />
-          <p class="us-team mt-2">Antonio</p>
-          <button type="button" class="btn btn-secondary btn-sm mb-5">
-            Read more
-          </button>
-        </div>
         <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Photographer" />
           <p class="us-team mt-2">Emilie Gonzales</p>
@@ -228,6 +205,29 @@
             Read more
           </button>
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4">
+        <img src="images/avatar.png" alt="REDSKY Actorscout" />
+        <p class="us-team mt-2">Paul</p>
+        <button type="button" class="btn btn-secondary btn-sm mb-5">
+          Read more
+        </button>
+      </div>
+      <div class="col-lg-4">
+        <img src="images/avatar.png" alt="REDSKY Assistant" />
+        <p class="us-team mt-2">Antonio</p>
+        <button type="button" class="btn btn-secondary btn-sm mb-5">
+          Read more
+        </button>
+      </div>
+      <div class="col-lg-4">
+        <img src="images/avatar.png" alt="REDSKY Casting Agent" />
+        <p class="us-team mt-2">Antonio</p>
+        <button type="button" class="btn btn-secondary btn-sm mb-5">
+          Read more
+        </button>
       </div>
     </div>
     <footer>
