--- a/us.html
+++ b/us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="REDSKY Studio"
-      content="REDSKY Studio is the most essential part of the company."
+      content="REDSKY Studio is the most essential part of the company. width=500, initial-scale=1"
     />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -108,12 +108,12 @@
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
           <img src="images/mats2.png" alt="REDSKY CEO" />
-          <p class="us-team mt-4">Mats Mekker Bjørseth</p>
-          <p class="us-team">CEO</p>
-          <p class="us-team">Founder</p>
-          <p class="us-team">Writer</p>
-          <p class="us-team">Director</p>
-          <p class="us-team">Producer</p>
+          <p class="us-team mt-4" id="team">Mats Mekker Bjørseth</p>
+          <p class="us-team" id="team">CEO</p>
+          <p class="us-team" id="team">Founder</p>
+          <p class="us-team" id="team">Writer</p>
+          <p class="us-team" id="team">Director</p>
+          <p class="us-team" id="team">Producer</p>
           <a href="mats.html" class="read-more-link" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
@@ -125,7 +125,7 @@
       <div class="row">
         <div class="col-lg-4">
           <img src="images/tj.png" alt="REDSKY Choreographer/Actor" />
-          <p class="us-team mt-2">TJ</p>
+          <p class="us-team mt-2" id="team">TJ</p>
           <a class="read-more-link" href="tj.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
@@ -134,7 +134,7 @@
         </div>
         <div class="col-lg-4">
           <img src="images/michaelc.jpeg" alt="REDSKY COO" />
-          <p class="us-team mt-2">Michael</p>
+          <p class="us-team mt-2" id="team">Michael</p>
           <a class="read-more-link" href="michael.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
@@ -146,7 +146,7 @@
             src="images/jay.png"
             alt="REDSKY Web Developer/Creative Designer"
           />
-          <p class="us-team mt-2">Jay</p>
+          <p class="us-team mt-2" id="team">Jay</p>
           <a class="read-more-link" href="jay.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
@@ -157,7 +157,7 @@
       <div class="row">
         <div class="col-lg-4">
           <img src="images/kevin.png" alt="REDSKY Sound engineer" />
-          <p class="us-team mt-2">Kevin</p>
+          <p class="us-team mt-2" id="team">Kevin</p>
           <a class="read-more-link" href="kevin.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
@@ -166,7 +166,7 @@
         </div>
         <div class="col-lg-4">
           <img src="images/blue.png" alt="REDSKY Photographer" />
-          <p class="us-team mt-2">Blue</p>
+          <p class="us-team mt-2" id="team">Blue</p>
           <a class="read-more-link" href="blue.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
@@ -175,7 +175,7 @@
         </div>
         <div class="col-lg-4">
           <img src="images/jimdesmed.png" alt="REDSKY Photographer" />
-          <p class="us-team mt-2">Jim de Smed</p>
+          <p class="us-team mt-2" id="team">Jim de Smed</p>
           <a class="read-more-link" href="jimdesmed.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
@@ -184,7 +184,7 @@
         </div>
         <div class="col-lg-4">
           <img src="images/mathewwesthead.png" alt="REDSKY Photographer" />
-          <p class="us-team mt-2">Mathew Westhead</p>
+          <p class="us-team mt-2" id="team">Mathew Westhead</p>
           <a class="read-more-link" href="mathew.html" target="_blank">
             <button type="button" class="btn btn-secondary btn-sm mb-5">
               Read more
@@ -200,7 +200,7 @@
         </div>
         <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Photographer" />
-          <p class="us-team mt-2">Emilie Gonzales</p>
+          <p class="us-team mt-2" id="team">Emilie Gonzales</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
@@ -209,21 +209,21 @@
       <div class="row">
         <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Actorscout" />
-          <p class="us-team mt-2">Paul</p>
+          <p class="us-team mt-2" id="team">Paul</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
         </div>
         <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Assistant" />
-          <p class="us-team mt-2">Antonio</p>
+          <p class="us-team mt-2" id="team">Antonio</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
         </div>
         <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Casting Agent" />
-          <p class="us-team mt-2">Antonio</p>
+          <p class="us-team mt-2" id="team">Antonio</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
