edited html and css

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>REDSKY</title>
   </head>
@@ -103,9 +109,9 @@
     <div class="hero">
       <div class="home-container container">
         <img src="images/main.png" class="main-logo" alt="REDSKY logo" />
-        <p class="introduction">The official website for REDSKY.no</p>
+        <p class="redsky-introduction">The official website for REDSKY.no</p>
 
-        <p class="introduction">
+        <p class="redsky-introduction">
           Upcoming projects by REDSKY will be announced soon.
         </p>
       </div>
