edited Antonio to TBA in us.html

--- a/us.html
+++ b/us.html
@@ -229,7 +229,7 @@
         </div>
         <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Casting Agent" />
-          <p class="us-team mt-2" id="team">Antonio</p>
+          <p class="us-team mt-2" id="team">TBA</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
