--- a/us.html
+++ b/us.html
@@ -206,7 +206,7 @@
         </div>
         <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Photographer" />
-          <p class="us-team mt-2" id="team">Emilie Gonzales</p>
+          <p class="us-team mt-2" id="team">Paul</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
@@ -215,14 +215,14 @@
       <div class="row">
         <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Actorscout" />
-          <p class="us-team mt-2" id="team">Paul</p>
+          <p class="us-team mt-2" id="team">Antonio</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
         </div>
         <div class="col-lg-4">
           <img src="images/avatar.png" alt="REDSKY Assistant" />
-          <p class="us-team mt-2" id="team">Antonio</p>
+          <p class="us-team mt-2" id="team">TBA</p>
           <button type="button" class="btn btn-secondary btn-sm mb-5">
             Read more
           </button>
