edit spanish map, added norwegian map

--- a/contact.html
+++ b/contact.html
@@ -85,9 +85,15 @@
       <p class="ceo-number">TBA</p> 
       <p class="address">Our address</p>
       </div>
-        <img src="images/plaza.sol.5.png" id="map" alt="Our office address">
-      <p class="office-address mt-5" title="address">Plaza del Sol 5, 03012 Alicante</p>
-        <p class="office-country">Spain</p>
+      <div class="map-office">
+        <p class="map-spain-office"> <strong>Spain</strong></p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3128.451132238722!2d-0.48506132320112794!3d38.361683978134174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd623706b89c572b%3A0xb841175750438ac5!2sPl.%20del%20Sol%2C%205%2C%2003012%20Alicante%20(Alacant)%2C%20Alicante%2C%20Spain!5e0!3m2!1sen!2sno!4v1734511880334!5m2!1sen!2sno" width="600" height="450" class="embed" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="map-office">
+        <p class="map-norway-office"><strong>Norway</strong></p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2000.4901988684005!2d10.778327677605207!3d59.907411564614115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416ef85b17769f%3A0xbcbaa69889062765!2sExtra%20St.%20Halvardsgate!5e0!3m2!1sen!2sno!4v1734511066757!5m2!1sen!2sno" width="600" height="450" class="embed" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
       </div>
     <footer>
       <div class="social-media-contact">
