added studio img to html

--- a/studio.html
+++ b/studio.html
@@ -117,6 +117,14 @@
         <img src="images/studio2.jpg" class="img-fluid" alt="Studio Photo 3" />
       </div>
     </div>
+    <div class="content mt-5">
+      <img src="images/about.png" alt="REDSKY About logo" width="200" />
+      <div class="studio-images">
+        <img src="images/studio4.jpg" class="img-fluid" alt="Studio Photo 4" />
+        <img src="images/studio5.jpg" class="img-fluid" alt="Studio Photo 5" />
+        <img src="images/studio6.jpg" class="img-fluid" alt="Studio Photo 6" />
+      </div>
+    </div>
     <footer>
       <div class="social-media-studio">
         <div>
