--- a/studio.html
+++ b/studio.html
@@ -120,9 +120,9 @@
     <div class="content mt-5">
       <img src="images/about.png" alt="REDSKY About logo" width="200" />
       <div class="studio-images">
-        <img src="images/studio4.jpg" class="img-fluid" alt="Studio Photo 4" />
-        <img src="images/studio5.jpg" class="img-fluid" alt="Studio Photo 5" />
-        <img src="images/studio6.jpg" class="img-fluid" alt="Studio Photo 6" />
+        <img src="images/studio4.jpeg" class="img-fluid" alt="Studio Photo 4" />
+        <img src="images/studio5.jpeg" class="img-fluid" alt="Studio Photo 5" />
+        <img src="images/studio6.jpeg" class="img-fluid" alt="Studio Photo 6" />
       </div>
     </div>
     <footer>
