--- a/mathew.html
+++ b/mathew.html
@@ -48,12 +48,7 @@
         boost REDSKY is the reason why he is chosen to be one of the best
         REDSKY's team members.
       </p>
-      <img
-        class="profile-photo"
-        src="images/mathewwesthead.jpg"
-        alt="Mathew's photo"
-        width="300"
-      />
+      <img class="profile-photo" src="" alt="Mathew's photo" width="300" />
     </div>
   </body>
 </html>
