copied to github

--- a/studio.html
+++ b/studio.html
@@ -112,49 +112,94 @@
     <div class="text-center">
       <img src="images/about.png" alt="REDSKY About logo" width="200" />
     </div>
-    <div class="scroll-container">
-      <div class="studio-images">
-        <img src="images/studio.jpg" class="img-fluid" alt="Studio Photo 1" />
-        <img src="images/studio3.jpg" class="img-fluid" alt="Studio Photo 2" />
-        <img src="images/studio2.jpg" class="img-fluid" alt="Studio Photo 3" />
-        <img src="images/studio4.jpg" class="img-fluid" alt="Studio Photo 4" />
-        <img
-          src="images/studio18.jpeg"
-          class="img-fluid"
-          alt="Studio Photo 18"
-        />
-        <img src="images/studio5.jpg" class="img-fluid" alt="Studio Photo 5" />
-        <img
-          src="images/studio10.jpeg"
-          class="img-fluid"
-          alt="Studio Photo 10"
-        />
-        <img src="images/studio6.jpeg" class="img-fluid" alt="Studio Photo 6" />
-        <img
-          src="images/studio11.jpeg"
-          class="img-fluid"
-          alt="Studio Photo 11"
-        />
-        <img
-          src="images/studio12.jpeg"
-          class="img-fluid"
-          alt="Studio Photo 12"
-        />
-        <img
-          src="images/studio13.jpeg"
-          class="img-fluid"
-          alt="Studio Photo 13"
-        />
-        <img
-          src="images/studio15.jpeg"
-          class="img-fluid"
-          alt="Studio Photo 15"
-        />
-        <img
-          src="images/studio16.jpeg"
-          class="img-fluid"
-          alt="Studio Photo 16"
-        />
+    <div class="studio-photos">
+      <div class="row">
+        <div class="col-lg-4">
+          <img src="images/studio.jpg" class="img-fluid" alt="Studio Photo 1" />
+        </div>
+        <div class="col-lg-4">
+          <img
+            src="images/studio3.jpg"
+            class="img-fluid"
+            alt="Studio Photo 2"
+          />
+        </div>
+        <div class="col-lg-4">
+          <img
+            src="images/studio2.jpg"
+            class="img-fluid"
+            alt="Studio Photo 3"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <img
+            src="images/studio4.jpg"
+            class="img-fluid"
+            alt="Studio Photo 4"
+          />
+        </div>
+        <div class="col-lg-4">
+          <img
+            src="images/studio18.jpeg"
+            class="img-fluid"
+            alt="Studio Photo 18"
+          />
+        </div>
+        <div class="col-lg-4">
+          <img
+            src="images/studio5.jpg"
+            class="img-fluid"
+            alt="Studio Photo 5"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <img
+            src="images/studio10.jpeg"
+            class="img-fluid"
+            alt="Studio Photo 10"
+          />
+        </div>
+        <div class="col-lg-4">
+          <img
+            src="images/studio6.jpeg"
+            class="img-fluid"
+            alt="Studio Photo 6"
+          />
+        </div>
+        <div class="col-lg-4">
+          <img
+            src="images/studio15.jpeg"
+            class="img-fluid"
+            alt="Studio Photo 15"
+          />
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <img
+              src="images/studio12.jpeg"
+              class="img-fluid"
+              alt="Studio Photo 12"
+            />
+          </div>
+          <div class="col-lg-4">
+            <img
+              src="images/studio13.jpeg"
+              class="img-fluid"
+              alt="Studio Photo 13"
+            />
+          </div>
+          <div class="col-lg-4">
+            <img
+              src="images/studio11.jpeg"
+              class="img-fluid"
+              alt="Studio Photo 11"
+            />
+          </div>
+        </div>
       </div>
     </div>
     <footer>
