--- a/mathew.html
+++ b/mathew.html
@@ -41,7 +41,7 @@
   <body>
     <div class="us-content-container">
       <p class="us-content">
-        Meet one of REDSKY's team members, Mathew Westhead, PR Manager.
+        Meet REDSKY PR Manager, Mathew Westhead.
         <br />
         A humble man originally from the UK, Mathew has traveled around the
         world. His passion and knowledge from traveling and his eagerness to
