--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="src/styles.css">
+
 
     <title>REDSKY</title>
   </head>
@@ -108,7 +110,7 @@
     </nav>
     <div class="hero">
       <div class="home-container container">
-        <img src="images/main.png" class="main-logo" alt="REDSKY logo" />
+        <img src="images/front_page.jpeg" class="main-logo" alt="REDSKY logo" />
         <p class="redsky-introduction">The official website for REDSKY.no</p>
       </div>
     </div>
