--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css">
-
-
     <title>REDSKY</title>
   </head>
   <body>
@@ -73,27 +71,12 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html" title="About REDSKY"
-                >About REDSKY</a
+                >About</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="About REDSKY Work"
-                >Our Work</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="studio.html" title="Our Studio"
-                >Our Studio</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="casting.html" title="Casting at REDSKY"
-                >Casting</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="us.html" title="About REDSKY Associates"
-                >Us</a
+              <a class="nav-link" href="work.html" title="About REDSKY Projects"
+                >Projects</a
               >
             </li>
             <li class="nav-item">
@@ -108,12 +91,7 @@
         </div>
       </div>
     </nav>
-    <div class="hero">
-      <div class="home-container container">
-        <img src="images/front_page.jpeg" class="main-logo" alt="REDSKY logo" />
-        <p class="redsky-introduction">The official website for REDSKY.no</p>
-      </div>
-    </div>
+    <div>
     <footer>
       <div class="social-media-home-index">
         <div>
@@ -135,14 +113,18 @@
           >
             <i class="fa-brands fa-2x fa-linkedin"></i>
           </a>
-          <a href="" target="_blank" title="REDSKY X">
+          <a href="https://x.com/MatsMekker1" target="_blank" title="REDSKY X">
             <i class="fa-brands fa-2x fa-x-twitter"></i>
           </a>
-          <a href="" target="_blank" title="Redsky Facebook">
+          <a href="" target="_blank" title="REDSKY Facebook">
             <i class="fa-brands fa-2x fa-facebook-f"></i>
+          </a>
+          <a href="https://www.imdb.com/activity/editprofile/?ref_=up_hd_edt" target="_blank" title="REDSKY Imdb">
+            <i class="fa-brands fa-2x fa-imdb"></i>
           </a>
         </div>
       </div>
     </footer>
+    </div>
   </body>
 </html>
