--- a/index.html
+++ b/index.html
@@ -70,13 +70,18 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="About REDSKY"
-                >About</a
+              <a class="nav-link" href="work.html" title="About REDSKY Projects"
+                >Projects</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="About REDSKY Projects"
-                >Projects</a
+              <a class="nav-link" href="about.html" title="About REDSKY"
+                >About REDSKY</a
+              >
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="mats.html" title="About Mats"
+                >About Mats</a
               >
             </li>
             <li class="nav-item">
