--- a/mats.html
+++ b/mats.html
@@ -26,40 +26,28 @@
       href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/portfolio.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/styling.css" />
     <title>Mats' Profile</title>
   </head>
   <body>
-    <div class="us-content-container">
-      <p class="us-content">
-        Mats Mekker Bjørseth or Maximillion Bayes or Max is one of the world's
-        multi-talented people. Originally from Norway, we know that he would
-        succeed as an athlete. At age of 6, he started his journey in
-        snowboarding, and by the age of 15, he was one of the chosen
-        snowboarders for the Olympic Games. He attended a culinary school in
-        Oslo and became a chef at age of... His first job was a chef at a
-        restaurant and later on he worked as a dj in a club in Oslo.
-        <br />
-        <br />
-        Despite being the best at what he was doing, his most passionate and
-        desired thing was movies and music. Years after, he started to enter the
-        film industry by working as a freelance movie translators, and that was
-        when he decided to write movie scripts. His mind has always been
-        brilliant and imaginative in a way that people would not expect such a
-        young soul to have a daring and crazy mind like him.
+    <div class="container">
+      <p class="content">
+        Mats Mekker Bjørseth is a Norwegian writer and director specializing in dark, character-driven psychological thrillers. His work explores the hidden darkness beneath suburban tranquility, the complexities of trauma, and the unsettling nature of truth. With a focus on atmospheric tension and intelligent, high-concept storytelling, he crafts narratives designed to challenge and linger long after the credits roll.
       </p>
       <img
         class="profile-photo"
-        src="images/mats1.png"
+        src="images/mats2.png"
         alt="Mats' photo"
-        width="300"
       />
+    </div>
+    <div class="ps-5">
+    <a href="../index.html">Back to Homepage</a>
     </div>
   </body>
 </html>
