edit html, css, add photo

--- a/about.html
+++ b/about.html
@@ -51,21 +51,14 @@
               <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="work.html" title="About REDSKY Work">Projects</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="about.html" title="About REDSKY">About REDSKY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="About REDSKY Work">Our Work</a>
-            </li>
-              <li class="nav-item">
-              <a class="nav-link" href="studio.html" title="Our Studio">Our Studio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="casting.html" title="Casting at REDSKY">Casting</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link" href="us.html" title="About REDSKY Associates"
-                >Us</a
-              >
+              <a class="nav-link" href="mats.html" title="About Mats"
+                >About Mats</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html" title="About Contact Information">Contact</a>
@@ -82,32 +75,8 @@
       </div>
     <div class="about-container container">
       <p class="redsky-description">
-        Welcome to REDSKY, a new and unparalleled fusion of cinematic
-        excellence, audion innovation and casting brilliance. At REDSKY, we are
-        not just a movie studio; we are a visionary and comprehensive
-        destination for the entire filmmaking journey.
-        <br />
-        <br />
-        REDSKY stands at the forefront of cinematic innovation, weaving
-        narratives that give an immense impact to our audience through our
-        creative minds. Each of our work is a testament to our dedication to
-        redefining the cinematic perspective.
-        <br />
-        <br />
-        At REDSKY, we believe in pushing the boundaries of storytelling,
-        transcending conventional narratives to create unforgettable cinematic
-        experiences. Our team of passionate filmmakers, visionaries, and
-        storytellers collaborate to bring bold ideas to life, blending
-        cutting-edge technology with the artistry of filmmaking.
-        <br />
-        <br />
-        REDSKY has collaborated with many established and globally known actors,
-        writers, photographers, audio engineers, artists and partners in the
-        film industry from Norway, Spain, Sweden, UK and America. From script to screen,
-        audition to casting, REDSKY is your destination for cinematic expertise,
-        where dreams are realized, and talents find their true expressions.
-        Welcome to REDSKY Studios - where every story begins, and every
-        performance becomes a masterpiece.
+        REDSKY stands at the forefront of modern filmmaking, delivering stories with real impact through sharp creative direction. Each project reflects our commitment to redefining cinematic storytelling.
+        <br>We work with respected actors, writers, photographers, audio engineers, and partners across Norway, Spain, Sweden, the UK, and the US. From script to screen, audition to casting, REDSKY handles every step of production with care and control.
       </p>
       </div>
       <footer>
@@ -125,17 +94,20 @@
             <i class="fa-brands fa-2x fa-instagram"></i>
           </a>
           <a
-            href="https://www.linkedin.com/in/redsky/"
+            href="https://www.linkedin.com/in/mats-bj%C3%B8rseth-37667313b/"
             target="_blank"
             title="REDSKY LinkedIn"
           >
             <i class="fa-brands fa-2x fa-linkedin"></i>
           </a>
-          <a href="" target="_blank" title="REDSKY X">
+          <a href="https://x.com/MatsMekker1" target="_blank" title="REDSKY X">
             <i class="fa-brands fa-2x fa-x-twitter"></i>
           </a>
-          <a href="" target="_blank" title="Redsky Facebook">
+          <a href="" target="_blank" title="REDSKY Facebook">
             <i class="fa-brands fa-2x fa-facebook-f"></i>
+          </a>
+          <a href="https://www.imdb.com/activity/editprofile/?ref_=up_hd_edt" target="_blank" title="REDSKY Imdb">
+            <i class="fa-brands fa-2x fa-imdb"></i>
           </a>
         </div>
       </div>
