--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <link rel="stylesheet" href="src/styles.css">
     <title>REDSKY</title>
   </head>
-  <body>
+  <body class="homepage">
     <nav class="navbar navbar-expand-lg" style="background-color: #000000">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
@@ -112,7 +112,7 @@
             <i class="fa-brands fa-2x fa-instagram"></i>
           </a>
           <a
-            href="https://www.linkedin.com/in/redsky/"
+            href="https://www.linkedin.com/in/mats-bj%C3%B8rseth-37667313b/"
             target="_blank"
             title="REDSKY LinkedIn"
           >
