--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/d8d89c7f5e.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles/portfolio.css" />
+    <link rel="stylesheet" href="src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -51,20 +51,14 @@
               <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="work.html" title="About REDSKY Work">Projects</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="about.html" title="About REDSKY">About REDSKY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="About REDSKY Work">Our Work</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="studio.html" title="Our Studio">Our Studio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="casting.html" title="Casting at REDSKY">Casting</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link" href="us.html" title="About REDSKY Associates"
-                >Us</a
+              <a class="nav-link" href="mats.html" title="About Mats"
+                >About Mats</a
               >
             </li>
             <li class="nav-item">
@@ -111,17 +105,20 @@
             <i class="fa-brands fa-2x fa-instagram"></i>
           </a>
           <a
-            href="https://www.linkedin.com/in/redsky/"
+            href="https://www.linkedin.com/in/mats-bj%C3%B8rseth-37667313b/"
             target="_blank"
             title="REDSKY LinkedIn"
           >
             <i class="fa-brands fa-2x fa-linkedin"></i>
           </a>
-          <a href="" target="_blank" title="REDSKY X">
+          <a href="https://x.com/MatsMekker1" target="_blank" title="REDSKY X">
             <i class="fa-brands fa-2x fa-x-twitter"></i>
           </a>
-          <a href="" target="_blank" title="Redsky Facebook">
+          <a href="" target="_blank" title="REDSKY Facebook">
             <i class="fa-brands fa-2x fa-facebook-f"></i>
+          </a>
+          <a href="https://www.imdb.com/activity/editprofile/?ref_=up_hd_edt" target="_blank" title="REDSKY Imdb">
+            <i class="fa-brands fa-2x fa-imdb"></i>
           </a>
         </div>
       </div>
