--- a/mats.html
+++ b/mats.html
@@ -46,7 +46,7 @@
         alt="Mats' photo"
       />
     </div>
-    <div class="ps-5">
+    <div class="pt-5 ps-5">
     <a href="../index.html">Back to Homepage</a>
     </div>
   </body>
