--- a/about.html
+++ b/about.html
@@ -67,13 +67,13 @@
         </div>
       </div>
     </nav>
-    <div class="content-container container">
+    <div class="content-container">
       <div class="content">
         <h1>
           <img class="logo" src="images/about.png" alt="REDSKY About logo" width="200" />
         </h1>
       </div>
-    <div class="about-container container">
+    <div class="about-container">
       <p class="redsky-description">
         REDSKY stands at the forefront of modern filmmaking, delivering stories with real impact through sharp creative direction. Each project reflects our commitment to redefining cinematic storytelling.
         <br>We work with respected actors, writers, photographers, audio engineers, and partners across Norway, Spain, Sweden, the UK, and the US. From script to screen, audition to casting, REDSKY handles every step of production with care and control.
