edit css, about.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="About REDSKY Projects"
+              <a class="nav-link" href="projects.html" title="About REDSKY Projects"
                 >Projects</a
               >
             </li>
