--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="desscription about REDSKY" content="Read more about what REDSKY is all about." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -51,7 +51,7 @@
               <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="About REDSKY Work">Projects</a>
+              <a class="nav-link" href="projects.html" title="About REDSKY Work">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html" title="About REDSKY">About REDSKY</a>
@@ -67,7 +67,7 @@
         </div>
       </div>
     </nav>
-    <div class="content-container">
+    <div class="content-container container-fluid">
       <div class="content">
         <h1>
           <img class="logo" src="images/about.png" alt="REDSKY About logo" width="200" />
@@ -112,5 +112,6 @@
         </div>
       </div>
     </footer>
+    </div>
   </body>
 </html>
