--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
       src="https://kit.fontawesome.com/d8d89c7f5e.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="src/styles.css">
     <link rel="stylesheet" href="styles/portfolio.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -26,7 +27,6 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/styles.css">
     <title>About REDSKY</title>
   </head>
   <body>
@@ -75,8 +75,9 @@
       </div>
     <div class="about-container">
       <p class="redsky-description">
-        REDSKY stands at the forefront of modern filmmaking, delivering stories with real impact through sharp creative direction. Each project reflects our commitment to redefining cinematic storytelling.
-        <br>We work with respected actors, writers, photographers, audio engineers, and partners across Norway, Spain, Sweden, the UK, and the US. From script to screen, audition to casting, REDSKY handles every step of production with care and control.
+        REDSKY stands at the forefront of modern film-making, delivering stories with real impact through sharp creative direction. Each project reflects our commitment to redefining cinematic storytelling.
+        </br>We work with respected actors, writers, photographers, audio engineers, and partners across Norway, Spain, Sweden, the UK, and the US. From script to screen, audition to casting, REDSKY handles every step of production with care and control.
+        </br>REDSKY is the film company Mats Mekker Bjørseth started in 2020.
       </p>
       </div>
       <footer>
