--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/portfolio.css" />
+    <link rel="stylesheet" href="src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -44,7 +44,7 @@
     />
     <title>Work Projects by REDSKY</title>
   </head>
-  <body>
+  <body class="projects-background">
     <nav class="navbar navbar-expand-lg" style="background-color: #000000">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
@@ -63,47 +63,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav justify-content-center">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="Homepage"
-                >Home</a
-              >
+              <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="About REDSKY"
-                >About REDSKY</a
-              >
+              <a class="nav-link" href="projects.html" title="About REDSKY Work">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="About REDSKY Work"
-                >Our Work</a
-              >
+              <a class="nav-link" href="about.html" title="About REDSKY">About REDSKY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="studio.html" title="Our Studio"
-                >Our Studio</a
-              >
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="casting.html" title="Casting at REDSKY"
-                >Casting</a
-              >
+              <a class="nav-link" href="mats.html" title="About Mats"
+                >About Mats</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="us.html" title="About REDSKY Associates"
-                >Us</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="contact.html"
-                title="About Contact Information"
-                >Contact</a
-              >
+              <a class="nav-link" href="contact.html" title="About Contact Information">Contact</a>
             </li>
           </ul>
         </div>
